[project]
name = "launchgate"
version = "0.0.0"
description = "Pure approval state machine and local pending store/channel for human-in-the-loop agent gates."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

[project.urls]
Homepage = "https://github.com/cachetronaut/launchgate"
Repository = "https://github.com/cachetronaut/launchgate"
Issues = "https://github.com/cachetronaut/launchgate/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/launchgate"]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6", "ty>=0.0.1a8"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ty.environment]
extra-paths = ["src"]
